fix: flex-wrap control element to flex container

--- a/src/components/field/KwField.scss
+++ b/src/components/field/KwField.scss
@@ -432,6 +432,9 @@
   &__control {
     outline: none;
     height: $kw-field-height;
+    align-items: stretch;
+    display: flex;
+    flex-flow: row nowrap;
   }
 
   &__control-container {
